Fix(new-docs): Reset horizontal margins on mobile and tablet (#11395)
* fix: reset horizontal margins on mobile and tablet

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -53,6 +53,10 @@
     flex-wrap: wrap;
     text-align: center;
   }
+
+  .noHorizontalMarginTablet {
+    margin-inline: 0 !important;
+  }
 }
 
 .features {
